@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19911018
+MANIFEST for ded, version t19911021
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
